--- a/scss/_util.scss
+++ b/scss/_util.scss
@@ -2,4 +2,10 @@
 	margin: auto;
 	background: $color-primary-dark;
 	color: white;
+	width: 95%;
+}
+.br {
+	width: 100%;
+	height: 2px;
+	background-color: $color-primary-light;
 }
