--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,17 +1,10 @@
-// config variables
-$color-primary: #0277bd;
-$color-primary-light: #58a5f0;
-$color-primary-dark: #004c8c;
-$color-secondary: #64b5f6;
-$color-secondary-light: #9be7ff;
-$color-secondary-dark: #2286c3;
 @import 'config';
 @import 'util';
 
 #header {
 	.header {
 		display: flex;
-		justify-content: space-evenly;
+		justify-content: space-between;
 		align-items: center;
 		background-color: darken($color-primary-dark, 10);
 
@@ -38,7 +31,6 @@ $color-secondary-dark: #2286c3;
 	justify-content: space-between;
 	align-items: center;
 	height: 500px;
-	width: 90%;
 	margin: auto;
 	background-color: darken($color-primary-dark, 5);
 	background-image: url("../imgs/intro1.jpg");
@@ -77,5 +69,105 @@ $color-secondary-dark: #2286c3;
 
 	#right-btn:hover {
 		transform: translateX(0.4rem);
+	}
+}
+
+#skills {
+	display: grid;
+	grid-template-columns: repeat(6, 1fr);
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	margin-top: 1rem;
+	gap: 0.2rem;
+	background-color: darken($color-primary-dark, $amount: 5);
+
+	h1 {
+		grid-column: 1/7;
+		font-size: 2rem;
+		text-align: start;
+		padding: 1rem;
+	}
+
+	.skill {
+		cursor: pointer;
+
+		i {
+			font-size: 4rem;
+			margin-top: 1rem;
+		}
+
+		h5 {
+			font-size: 1.2rem;
+			margin: 1rem 0;
+			transition: all 100ms ease-in-out;
+			min-height: 50px;
+		}
+	}
+
+	.skill:hover h5 {
+		font-size: 2rem;
+	}
+}
+
+#projects {
+	h1 {
+		font-size: 2rem;
+		padding: 1rem 1.2rem 0 0;
+		margin: 1rem;
+	}
+	h2 {
+		font-size: 1.6rem;
+	}
+	p {
+		font-size: 1.2rem;
+		margin-top: 1rem;
+		padding: 1rem;
+	}
+
+	img {
+		width: 400px;
+		object-fit: cover;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	}
+
+	.projects {
+		background-color: darken($color-primary-dark, $amount: 10);
+
+		.project1 {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-evenly;
+			padding: 1rem;
+			// margin-top: 1rem;
+
+			.project-content {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				width: 40%;
+				i {
+					margin-left: 5px;
+				}
+				a:hover i {
+					margin-left: 10px;
+				}
+			}
+		}
+	}
+}
+
+footer {
+	padding: 1rem;
+	font-size: 1.2rem;
+	text-align: center;
+	background-color: darken($color-primary, $amount: 10) !important;
+}
+
+// media query
+@media (min-width: 1200px) {
+	.container {
+		width: 1080px;
 	}
 }
