--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,8 +9,8 @@
 		background-color: darken($color-primary-dark, 10);
 
 		.logo {
-			width: 60px;
-			margin: 1rem 2rem;
+			width: 40px;
+			margin: 0.4rem 2rem;
 		}
 
 		.menu {
@@ -80,8 +80,8 @@
 	text-align: center;
 	margin-top: 1rem;
 	gap: 0.2rem;
-	background-color: darken($color-primary-dark, $amount: 5);
-
+	background-color: white;
+	color: $color-primary-dark;
 	h1 {
 		grid-column: 1/7;
 		font-size: 2rem;
@@ -102,6 +102,29 @@
 			margin: 1rem 0;
 			transition: all 100ms ease-in-out;
 			min-height: 50px;
+		}
+		#html5 {
+			background: linear-gradient(to right, #e34c26 50%, #f06529 50%);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+		}
+		#css3 {
+			background: linear-gradient(to right, #264de4 50%, #2965f1 50%);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+		}
+		#js {
+			color: yellow;
+			background: linear-gradient(white 6%, black 6%, black 93%, white 93%);
+		}
+		#bootstrap {
+			color: #563d7c;
+		}
+		#react {
+			color: #61dbfb;
+		}
+		#linux {
+			color: black;
 		}
 	}
 
