--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,6 +116,7 @@
 		#js {
 			color: yellow;
 			background: linear-gradient(white 6%, black 6%, black 93%, white 93%);
+			text-shadow: 1px 0px;
 		}
 		#bootstrap {
 			color: #563d7c;
@@ -123,8 +124,8 @@
 		#react {
 			color: #61dbfb;
 		}
-		#linux {
-			color: black;
+		#sass {
+			color: #c69;
 		}
 	}
 
