--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,49 +134,103 @@
 	}
 }
 
-#projects {
-	h1 {
-		font-size: 2rem;
-		padding: 1rem 1.2rem 0 0;
-		margin: 1rem;
-	}
-	h2 {
-		font-size: 1.6rem;
-	}
-	p {
-		font-size: 1.2rem;
-		margin-top: 1rem;
-		padding: 1rem;
-	}
+// #projects {
+// 	h1 {
+// 		font-size: 2rem;
+// 		padding: 1rem 1.2rem 0 0;
+// 		margin: 1rem;
+// 	}
+// 	h2 {
+// 		font-size: 1.6rem;
+// 	}
 
-	img {
-		width: 400px;
-		object-fit: cover;
-		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	}
+// 	p {
+// 		font-size: 1.2rem;
+// 		margin-top: 1rem;
+// 		padding: 1rem;
+// 	}
 
-	.projects {
-		background-color: darken($color-primary-dark, $amount: 10);
+// 	img {
+// 		width: 400px;
+// 		object-fit: cover;
+// 		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+// 	}
 
-		.project1 {
+// 	.projects {
+// 		background-color: darken($color-primary-dark, $amount: 10);
+
+// 		.project1 {
+// 			display: flex;
+// 			flex-direction: row;
+// 			justify-content: space-evenly;
+// 			padding: 1rem;
+// 			// margin-top: 1rem;
+
+// 			.project-content {
+// 				display: flex;
+// 				flex-direction: column;
+// 				align-items: center;
+// 				justify-content: center;
+// 				width: 40%;
+// 				i {
+// 					margin-left: 5px;
+// 				}
+// 				a:hover i {
+// 					margin-left: 10px;
+// 				}
+// 			}
+// 		}
+// 	}
+// }
+
+.projects {
+	&-content {
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		// background-color: #2a3351;
+
+		.projects-img {
+			width: 50%;
 			display: flex;
-			flex-direction: row;
-			justify-content: space-evenly;
-			padding: 1rem;
-			// margin-top: 1rem;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+			padding: 1rem 0;
+			margin: 0.5rem;
 
-			.project-content {
+			border-radius: 0.5rem;
+			background-color: $color-primary;
+
+			img {
+				width: 80%;
+				border-radius: 0.5rem;
+				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
+			}
+			h2 {
+				margin: 1rem 0;
+			}
+			h5 {
+				color: #cdd1e4;
+			}
+		}
+
+		.content-detail {
+			align-self: stretch;
+			width: 50%;
+			display: flex;
+			flex-direction: column;
+
+			&-up,
+			&-down {
+				padding: 1rem;
+				background-color: $color-primary;
+				border-radius: 0.5rem;
+				margin: 0.5rem;
+				height: 100%;
 				display: flex;
-				flex-direction: column;
 				align-items: center;
-				justify-content: center;
-				width: 40%;
-				i {
-					margin-left: 5px;
-				}
-				a:hover i {
-					margin-left: 10px;
-				}
 			}
 		}
 	}
