--- a/scss/_util.scss
+++ b/scss/_util.scss
@@ -9,3 +9,14 @@
 	height: 2px;
 	background-color: $color-primary-light;
 }
+
+.btn-primary {
+	padding: 0.3rem 1.6rem;
+	border-radius: 0.2rem;
+	border: none;
+	background-color: $color-primary;
+	color: white;
+	&:hover {
+		background-color: $color-primary-light;
+	}
+}
