--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,6 +42,7 @@
 		&:hover {
 			transform: translateX(-0.2rem);
 			color: $color-secondary-light;
+			cursor: pointer;
 		}
 	}
 
@@ -56,6 +57,16 @@
 		&:hover {
 			transform: translateX(0.2rem);
 			color: $color-secondary-light;
+			cursor: pointer;
+		}
+	}
+
+	@keyframes showbg {
+		from {
+			opacity: 0;
+		}
+		to {
+			opacity: 1;
 		}
 	}
 
@@ -67,6 +78,8 @@
 		display: none;
 		opacity: 0;
 		transition: all 800ms ease-in-out;
+		animation-name: showbg;
+		animation-duration: 1500ms;
 
 		&::after {
 			content: "";
@@ -76,7 +89,6 @@
 			width: 100%;
 			height: 100%;
 			background: rgba(0, 0, 0, 0.6);
-			// box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;
 		}
 
 		h1 {
@@ -246,6 +258,63 @@ footer {
 	font-size: 1.2rem;
 	text-align: center;
 	background-color: darken($color-primary, $amount: 10) !important;
+}
+
+// modal
+#modal-skill {
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 3;
+	background-color: rgba($color: #000000, $alpha: 0.6);
+	display: none;
+
+	.modal-skill {
+		position: relative;
+		width: 300px;
+		height: 500px;
+		background-color: white;
+		color: $color-primary-dark;
+		border-radius: 0.4rem;
+		margin: 150px auto;
+
+		& > i {
+			position: absolute;
+			right: 1rem;
+			top: 1rem;
+		}
+
+		.modal-top {
+			height: 200px;
+			text-align: center;
+			padding-top: 4rem;
+			& > h5 {
+				font-size: 2rem;
+			}
+		}
+		.modal-bottom {
+			background-color: #f2f2f3;
+			height: 300px;
+			border-radius: 0.4rem;
+
+			> button {
+				position: absolute;
+				bottom: 1rem;
+				left: 50%;
+				transform: translateX(-50%);
+			}
+			p {
+				font-size: 1.2rem;
+				padding: 2rem;
+			}
+		}
+	}
+}
+
+.show-modal {
+	display: block !important;
 }
 
 // media query
