--- a/scss/style.scss
+++ b/scss/style.scss
@@ -109,6 +109,9 @@
 			font-size: 1.6rem;
 			margin-top: 1rem;
 			z-index: 2;
+			width: 60%;
+			margin-left: auto;
+			margin-right: auto;
 		}
 		a {
 			position: relative;
