--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,16 +9,29 @@
 		justify-content: space-between;
 		align-items: center;
 		background-color: darken($color-primary-dark, 10);
+		height: 50px;
 
 		.logo {
 			width: 40px;
+			padding: 5px;
 			margin: 0.4rem 2rem;
 		}
+		.menu-bar {
+			margin-right: 2rem;
+			transition: all 400ms ease-in-out;
+			position: fixed;
+			right: 2rem;
+			display: none;
 
+			&:hover {
+				color: $color-secondary;
+			}
+		}
 		.menu {
 			display: flex;
 			align-items: center;
 			padding-right: 2rem;
+			transition: all 200ms ease-out;
 
 			&-active {
 				font-weight: bold;
@@ -95,7 +108,7 @@
 			left: 0;
 			width: 100%;
 			height: 100%;
-			background: rgba(0, 0, 0, 0.6);
+			background: rgba(black, 0.4);
 		}
 
 		h1 {
@@ -328,7 +341,6 @@
 			padding-top: 4rem;
 			animation-name: modal-top-move-in;
 			animation-duration: 600ms;
-			-moz-animation-timing-function: ease-out;
 
 			@keyframes modal-top-move-in {
 				from {
@@ -363,8 +375,52 @@
 	}
 }
 
+#modal-img {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 3;
+	left: 0;
+	top: 0;
+	background-color: $color-primary-dark;
+	// display: flex;
+	display: none;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
+	&-close {
+		position: fixed;
+		right: 1rem;
+		top: 1rem;
+		z-index: 5;
+
+		&:hover {
+			color: $color-secondary;
+		}
+	}
+	&-content {
+		max-width: 1080px;
+		animation-name: zoomIn;
+		animation-duration: 600ms;
+
+		@keyframes zoomIn {
+			from {
+				transform: scale(0);
+			}
+			to {
+				transform: scale(1);
+			}
+		}
+	}
+}
+
 .show-modal {
 	display: block !important;
+}
+
+.show-modal-img {
+	display: flex !important;
 }
 
 @import 'util';
