--- a/scss/_resume.scss
+++ b/scss/_resume.scss
@@ -7,6 +7,7 @@
 		img {
 			border-radius: 50%;
 			border: 4px solid $color-primary-light;
+			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.4);
 		}
 	}
 	.name {
