--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,13 +8,17 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		background-color: darken($color-primary-dark, 10);
+		background-color: darken($color-primary-dark, 2);
+
 		height: 50px;
 
 		.logo {
 			width: 40px;
 			padding: 5px;
 			margin: 0.4rem 2rem;
+			&:hover {
+				cursor: pointer;
+			}
 		}
 		.menu-bar {
 			margin-right: 2rem;
@@ -197,9 +201,22 @@
 		-webkit-text-fill-color: transparent;
 	}
 	#js {
-		color: darken(yellow, 10);
-		// background: linear-gradient(white 6%, black 6%, black 93%, white 93%);
-		// text-shadow: 1px 0px;
+		color: yellow;
+		position: relative;
+		background-image: url("../imgs/black.jpg");
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: 50px 50px;
+
+		// &::after {
+		// 	content: "";
+		// 	width: 100%;
+		// 	height: 100%;
+		// 	position: absolute;
+		// 	top: 0;
+		// 	left: 0;
+		// 	background-color: black;
+		// }
 	}
 	#bootstrap {
 		color: #563d7c;
@@ -284,7 +301,6 @@
 	justify-content: space-between;
 	align-items: center;
 	text-align: center;
-	background-color: darken($color-primary, $amount: 10) !important;
 	padding: 0.4rem 2rem;
 	border-radius: 0.4rem;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
