--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,7 @@
 
 @import 'config';
 @import "resume";
+@import "_about";
 
 #header {
 	.header {
@@ -23,7 +24,7 @@
 		.menu-bar {
 			margin-right: 2rem;
 			transition: all 400ms ease-in-out;
-			position: fixed;
+			position: absolute;
 			right: 2rem;
 			display: none;
 
@@ -53,7 +54,7 @@
 .intro {
 	height: 500px;
 	margin: auto;
-	background-color: black;
+	background-color: $color-primary-dark;
 	position: relative;
 
 	#left-btn {
