--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -14,8 +14,9 @@
 		}
 
 		&-title {
+			font-size: 1rem;
 			position: absolute;
-			top: -1rem;
+			top: -2rem;
 			left: 50%;
 			padding: 0.6rem 2rem;
 			border-radius: 0.4rem;
@@ -41,3 +42,4 @@
 		}
 	}
 }
+
