--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,10 +23,9 @@
 			}
 		}
 		.menu-bar {
-			margin-right: 2rem;
 			transition: all 400ms ease-in-out;
 			position: absolute;
-			right: 2rem;
+			right: 2.2rem;
 			display: none;
 
 			&:hover {
@@ -36,7 +35,7 @@
 		.menu {
 			display: flex;
 			align-items: center;
-			padding-right: 2rem;
+			padding: 2rem;
 			transition: all 200ms ease-out;
 
 			&-active {
